--- a/cloud-init.yml
+++ b/cloud-init.yml
@@ -59,3 +59,7 @@ write_files:
     owner: "root"
     content: |
       nameserver 10.1.1.20
+  - path: /etc/profile.d/aliases.sh
+    content: |
+    alias l='ls -lFh'
+    alias ll='ls -lFhA'
